# Convex-hull-bounding-box-fitting-3D-LiDAR-ROS

./: CMakeLists.txt  README.md  package.xml
include/: convex_optimize_fitting.h
launch/: run.launch
nodes/convex_optimize_fitting/: convex_optimize_fitting.cpp
rviz/: convex_optimize_fitting.rviz
