<?xml version="1.0"?>
<package format="2">
  <name>convex_optimize_fitting</name>
  <version>1.12.0</version>
  <description>convex_optimize_fitting package</description>
  <maintainer email="hmx_2013@outlook.com">hmx</maintainer>
  <license>MIT</license>

  <!-- <buildtool_depend>autoware_build_flags</buildtool_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
